# rschristopher.github.io

./: Makefile  README.md  levels.drawio  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: 404.html  CNAME  index.html  index.md  sitemap.xml
docs/.well-known/: nostr.json
docs/about/: index.html
docs/articles/: index.html
docs/bitcoin-as-money/: index.html
docs/commerce/: index.html
docs/criticisms/: index.html
docs/currency/: index.html
docs/custody/: index.html
docs/execution/: index.html
docs/finance/: index.html
docs/financing/: index.html
docs/foo/: index.html
docs/is-bitcoin-true/: index.html
docs/issuance/: index.html
docs/js/: btcusd.js
docs/mining/: index.html
docs/payments/: index.html
docs/pow/: index.html
docs/prices/: index.html
docs/references/: index.html
docs/saving/: index.html
docs/search/: search_index.json
docs/self-custody/: index.html
docs/services/: index.html
docs/settlement/: index.html
docs/spending/: index.html
docs/store-of-value/: index.html
docs/tools/: index.html
docs/what-is-bitcoin/: index.html
site/: 404.html
src/: foo.md  index.md  is-bitcoin-true.md  prices.md  services.md  store-of-value.md
src/about/: contact.md  index.md  nostr.md  references.md
src/articles/: index.md
src/bitcoin-as-money/: easy-vs-hard.md  fixed-supply.md  in-the-year-2140.md  index.md  medium-of-exchange.md  monetary-policy.md  money-and-state.md  separation-money-and-state.md  store-of-value.md  unit-of-account.md
src/commerce/: index.md  understand-the-terms.md
(+499 files in other folders)
