[tool.poetry]
name = "rschristopher.github.io"
version = "1.0.1"
description = ""
authors = ["RS Christopher <rschristopher@avant.net>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
