[tool.poetry]
name = "rschristopher.github.io"
version = "1.0.1"
description = ""
authors = ["RS Christopher <rschristopher@avant.net>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
